--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -692,6 +692,7 @@ service installd /system/bin/installd
 
 service flash_recovery /system/bin/install-recovery.sh
     class main
+    disabled
     oneshot
 
 service racoon /system/bin/racoon
