--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -84,7 +84,7 @@ on init
     symlink /mnt/user/0/primary /mnt/runtime/default/self/primary
 
     # shared memory used by VPU to distinguish VPU instance.
-    mkdir /mnt/shm  0775 media syste
+    mkdir /mnt/shm  0775 media system
     mount tmpfs tmpfs /mnt/shm mode=0775,uid=1013,gid=1000,size=1m
 
     # memory control cgroup
