Don't try to start debuggerd64

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -351,7 +351,7 @@ on post-fs-data
 
     # start debuggerd to make debugging early-boot crashes easier.
     start debuggerd
-    start debuggerd64
+    #start debuggerd64
 
     # Make sure we have the device encryption key.
     start vold
