--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -228,7 +228,7 @@ on init
     chmod 0440 /sys/fs/pstore/pmsg-ramoops-0
 
     # enable armv8_deprecated instruction hooks
-    write /proc/sys/abi/swp 1
+    #write /proc/sys/abi/swp 1
 
     # Linux's execveat() syscall may construct paths containing /dev/fd
     # expecting it to point to /proc/self/fd
