--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -666,4 +666,5 @@ service console /system/bin/sh
 
 service flash_recovery /system/bin/install-recovery.sh
     class main
+    disabled
     oneshot
